[package]
name = "pikchr_nif"
version = "0.5.0"
edition = "2021"

[lib]
name = "pikchr_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pikchr = "0.1"
rustler = { version = "0.37", default-features = false, features = ["derive"] }

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
